INCLUDES = -I$(top_srcdir)/kalarm -I$(top_srcdir) \
	-I$(top_srcdir)/libkdepim $(all_includes) 

noinst_LTLIBRARIES = libwidgets.la

libwidgets_la_METASOURCES = AUTO

libwidgets_la_SOURCES = \
	buttongroup.cpp checkbox.cpp colourcombo.cpp colourlist.cpp \
	combobox.cpp dateedit.cpp datetime.cpp messagebox.cpp \
	pushbutton.cpp radiobutton.cpp timespinbox.cpp timeperiod.cpp \
	shellprocess.cpp slider.cpp spinbox.cpp spinbox2.cpp

noinst_HEADERS = \
	buttongroup.h checkbox.h colourcombo.h colourlist.h \
	combobox.h dateedit.h datetime.h messagebox.h \
	pushbutton.h radiobutton.h timespinbox.h timeperiod.h \
	shellprocess.h slider.h spinbox.h spinbox2.h
