INCLUDES = -I$(top_srcdir)/kalarm -I$(top_srcdir) $(all_includes) 

noinst_LTLIBRARIES = libwidgets.la

libwidgets_la_METASOURCES = AUTO

libwidgets_la_SOURCES = \
	buttongroup.cpp checkbox.cpp colourcombo.cpp colourlist.cpp \
	combobox.cpp dateedit.cpp datetime.cpp label.cpp messagebox.cpp \
	pushbutton.cpp radiobutton.cpp timeedit.cpp timespinbox.cpp \
	timeperiod.cpp shellprocess.cpp slider.cpp spinbox.cpp spinbox2.cpp

noinst_HEADERS = \
	buttongroup.h checkbox.h colourcombo.h colourlist.h \
	combobox.h dateedit.h datetime.h label.h messagebox.h \
	pushbutton.h radiobutton.h timeedit.h timespinbox.h \
	timeperiod.h shellprocess.h slider.h spinbox.h spinbox2.h
